--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": "4.x"
   },
   "scripts": {
-    "start": "node server.js -b 0.0.0.0"
+    "start": "node server.js -b 0.0.0.0",
+    "local": "node local.js -s yingsuogo.herokuapp.com -l 1080 -m aes-256-cfb -k 123456 -r 80"
   }
 }
